[project]
name = "thoughtful"
version = "0.1.0"
description = "This is a take-home exercise for being submited to thoughtful.ai"
authors = [
    {name = "Mathias Lantean"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "behave (>=1.2.6,<2.0.0)",
    "ruff (>=0.12.5,<0.13.0)",
    "reformat-gherkin (>=3.0.1,<4.0.0)",
    "coverage (>=7.10.1,<8.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["features"]
